--- a/soundgame/Styles/custom.css
+++ b/soundgame/Styles/custom.css
@@ -25,8 +25,18 @@
 #canvas:hover{
 	background-color: #3071a9;
 	border: 1px solid #285e8e;
+}
 
+.Recording{
+	background-color: #3071a9;
+	border: 1px solid #285e8e;
+}
 
+.doneRecording{
+	background-color: #4cae4c;
+	border: #4cae4c;
+		
+	
 }
 
 .play{
@@ -37,6 +47,11 @@
 	padding: 15px 0;
 	border-radius: 10px 0 0 10px;
 	float: left;
+}
+
+.playback{
+	visibility: hidden;
+
 }
 
 
